[gd_scene load_steps=6 format=3 uid="uid://il1lsiurqrgt"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/location_ui.gd" id="1_14x18"]
[ext_resource type="Material" uid="uid://bqr8nx8r5c16s" path="res://scenes/ui/main_menu/greyscale_shader_material.tres" id="2_fhabf"]
[ext_resource type="Texture2D" uid="uid://bhm7hh3bmt41u" path="res://art/rune_easy.png" id="2_xg2ry"]
[ext_resource type="Texture2D" uid="uid://b1q5myck0jquv" path="res://art/rune_medium.png" id="3_71cgu"]
[ext_resource type="Texture2D" uid="uid://cs72sdyll77td" path="res://art/rune_hard.png" id="4_6agla"]

[node name="LocationUi" type="Control"]
custom_minimum_size = Vector2(70, 49)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_14x18")

[node name="LocationContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 70.0
offset_bottom = 49.0

[node name="DifficultyIconContainer" type="HBoxContainer" parent="LocationContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="EasyIcon" type="TextureRect" parent="LocationContainer/DifficultyIconContainer"]
material = ExtResource("2_fhabf")
layout_mode = 2
tooltip_text = "Easy"
texture = ExtResource("2_xg2ry")

[node name="MediumIcon" type="TextureRect" parent="LocationContainer/DifficultyIconContainer"]
layout_mode = 2
tooltip_text = "Medium"
texture = ExtResource("3_71cgu")

[node name="HardIcon" type="TextureRect" parent="LocationContainer/DifficultyIconContainer"]
layout_mode = 2
tooltip_text = "Hard"
texture = ExtResource("4_6agla")

[node name="LocationButton" type="Button" parent="LocationContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 25)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 6
text = "Spider Cavern"

[node name="CompletionOverlay" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 6.0
offset_top = 0.999999
offset_right = 76.0
offset_bottom = 13.0
rotation = 0.523599
scale = Vector2(1.2, 1.2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "FINISHED"
